manifests/streets/gateway/ingress-member.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: member-ingress
  namespace: member-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # 그룹 이름을 같게 설정하면 하나의 ALB로 합쳐집니다.
    alb.ingress.kubernetes.io/group.name: "streets-app-group"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:745173969277:certificate/7bcf3aa1-d03e-4353-ab0b-8bab9c84cb99
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: "12-streets.store"
      http:
        paths:
          # 1. 로그인 관련 요청은 무조건 이 서비스로! (추가)
          - path: /login.do
            pathType: Exact
            backend:
              service:
                name: tomcat-member-service
                port:
                  number: 8080
          # 2. JSP 파일들도 이 서비스로! (추가)
          - path: /index.jsp
            pathType: Exact
            backend:
              service:
                name: tomcat-member-service
                port:
                  number: 8080
          # 3. 나머지는 기본 경로
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomcat-member-service
                port:
                  number: 8080
